Refactor test case of experiment